--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -9,4 +9,53 @@
   --color-grey-7: #ffffff;
   --color-alert: #c22554;
   --font-primary: "Inter", sans-serif;
+  --border-radius: 4px;
+
+  /* Fonts */
+
+  --font-weight-1: 600;
+  --font-weight-2: 500;
+  --font-weight-3: 400;
+
+  --font-size-1: 2rem;
+  --font-size-2: 1rem;
+  --font-size-3: 0.875rem;
+
+  --font-height: 150%;
+}
+
+body {
+  max-width: 100vw;
+  min-height: 100vh;
+  color: var(--color-grey-7);
+  font-family: var(--font-primary);
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
+button {
+  color: var(--color-grey-7);
+  background-color: var(--color-brand-2);
+  border-radius: var(--border-radius);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 93px;
+  gap: 10px;
+  outline: none;
+  cursor: pointer;
+  border: 1px solid var(--color-brand-2);
+}
+img{
+  height: 75px;
+  width: 75px;
+  border-radius: 50%;
 }
