--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,6 +1,10 @@
 body {
     background: var(--color-grey-2);
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 
 }
 
@@ -9,6 +13,7 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    gap: 180px;
 }
 
 .user__container>button {
@@ -31,6 +36,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     gap: 20px;
 }
 
