--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -13,7 +13,8 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    gap: 180px;
+    gap: 5px;
+    width: 700px;
 }
 
 .user__container>button {
@@ -58,17 +59,18 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 20px;
     flex-wrap: wrap;
     margin-top: 50px;
     padding: 20px;
+    width: 700px;
 }
 
 .repositories {
     box-sizing: border-box;
 
-    width: 381px;
+    width: calc(50% - 10px);
     height: 243px;
     border: 2px solid rgba(255, 255, 255, 0.1);
     background: var(--color-grey-1);
@@ -77,9 +79,9 @@ body {
 
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;;
     align-items: flex-start;
-    padding: 40px;
+    padding: 20px;
     gap: 20px;
 }
 
